sun animation bones

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   </head>
   <body>
     <ul>
-      <li><a href="./0/">sketch 0</a></li>
-      <li><a href="./1/">sketch 1</a></li>
+      <li><a href="./hamilton/">The Hamiltons</a></li>
+      <li><a href="./trask/">The Trasks</a></li>
     </ul>
   </body>
 </html>
+
+<!-- to do: make a nice atmospheric background for this page, good font for text-->
