--- a/imagetest/index.html
+++ b/imagetest/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.7.0/lib/p5.js"></script>
+    <script src="sketch.js"></script>
     <style>
       * {
         box-sizing: border-box;
@@ -9,15 +10,17 @@
       html, body {
         margin: 0;
       }
+      canvas {
+        display: block;
+      }
+      #main {
+        display: block;
+        width: 100%;
+        height: 100vh;
+      }
     </style>
   </head>
   <body>
-    <ul>
-      <li><a href="./hamilton/">The Hamiltons</a></li>
-      <li><a href="./trask/">The Trasks</a></li>
-      <li><a href="./imagetest/">image test</a></li>
-    </ul>
+    <main id="main"></main>
   </body>
 </html>
-
-<!-- to do: make a nice atmospheric background for this page, good font for text-->
